--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -5,7 +5,18 @@ If you are migrating to Red Hat Virtualization, select one or more existing host
 
 If you are migrating to OpenStack Platform:
 
-. Download the OpenStack Platform conversion appliance from _TBD_.
+. Download the OpenStack Platform conversion appliance:
+
+.. Go to the link:https://access.redhat.com/downloads/[Red Hat Customer Portal Product Downloads] site.
+.. In the *A-Z* tab, click *Red Hat OpenStack Platform*.
+.. Click the green *Download Latest* button to go to the OpenStack Platform download page.
+.. In the *Product Software* tab, click TBD (hasn't appeared yet) to download the appliance.
++
+[NOTE]
+====
+You should always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes.
+====
+
 . Upload the appliance to Glance storage.
 . Deploy the appliance as a conversion host instance, with the following resources:
 
