--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Premigration_tasks.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Premigration_tasks.adoc
@@ -3,7 +3,7 @@
 [[CSV_file]]
 == Creating a CSV file to import virtual machines
 
-If you are migrating a large number of virtual machines or xref:Retrying_and_remigrating[remigrating] virtual machines, you must create a CSV file to import the source virtual machines into the migration plan. (If you are migrating a small number of virtual machines, you do not need to create a CSV file. The migration plan can discover and display a list from which you manually select the virtual machines to migrate.)
+If you are migrating a large number of virtual machines or xref:Retrying_and_remigrating[re-migrating] virtual machines, you must create a CSV file to import the source virtual machines into the migration plan. (If you are migrating a small number of virtual machines, you do not need to create a CSV file. The migration plan can discover and display a list from which you manually select the virtual machines to migrate.)
 
 The virtual machine `Name` is mandatory. `Provider`, `Host`, and `Cluster` are optional, to differentiate identical virtual machine names in different environments.
 
