--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_and_remigrating.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_and_remigrating.adoc
@@ -1,7 +1,7 @@
 [[Retrying_and_remigrating]]
-= Retrying and remigrating
+= Retrying and re-migrating
 
-When virtual machines fail to migrate, the migration plan's status is `Failed`. If the source virtual machines have never been migrated, you can retry the failed migration plan. If the virtual machines have been migrated previously, you must remigrate the virtual machines using a CSV file.
+When virtual machines fail to migrate, the migration plan's status is `Failed`. If the source virtual machines have never been migrated, you can retry the failed migration plan. If the virtual machines have been migrated previously, you must re-migrate the virtual machines using a CSV file.
 
 .Procedure
 
@@ -16,7 +16,7 @@ When virtual machines fail to migrate, the migration plan's status is `Failed`. 
 .. Click `Migration Plans Complete`.
 .. Click the `Retry` button beside the failed migration plan.
 
-. Remigrate the virtual machines if they have been migrated in the past:
+. Re-migrate the virtual machines if they have been migrated in the past:
 
 .. Create a xref:CSV_file[CSV file] with the names of the source virtual machines.
 .. Create a new migration plan using the CSV file to import the virtual machines.
