--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,7 +1,7 @@
 [id='Troubleshooting']
 = Troubleshooting
 
-If errors occur for reasons unrelated to the infrastructure mapping or migration plan (for example, network outage), you can retry the migration plan or remigrate previously migrated virtual machines. See xref:Retrying_and_remigrating[].
+If errors occur for reasons unrelated to the infrastructure mapping or migration plan (for example, network outage), you can retry the migration plan or re-migrate previously migrated virtual machines. See xref:Retrying_and_remigrating[].
 
 If the cause of the failed migration is not clear, see xref:Logs[] and xref:Common_issues_and_mistakes[].
 
