--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -24,29 +24,41 @@ You are ready to configure the conversion hosts.
 [id='VDDK_and_SSH_Configuring_the_conversion_hosts']
 == VDDK and SSH: Configuring the conversion hosts
 
-. Go to +/usr/share/ovirt-ansible-v2v-conversion-host-_version_/playbooks+ on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform).
+. Go to `/usr/share/ovirt-ansible-v2v-conversion-host/playbooks` on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform).
 
 . Create `extra_vars.yml` according to the following examples:
 
 * Red Hat Virtualization conversion host using VDDK:
 +
-[options="nowrap" subs="+quotes,verbatim"]
+[options="nowrap" subs="verbatim"]
 ----
 ---
 v2v_host_type: rhv
+
 # Transport methods to configure on the conversion host. Valid values: 'vddk', 'ssh' (on separate lines)
 v2v_transport_methods:
   - vddk
+
 # Maximum number of concurrent conversions per host. Default is '10'.
 v2v_max_concurrent_conversions: _10_
-# File name of .tar.gz package with VDDK library, located in /tmp.
+
+# File name of `.tar.gz` package with VDDK library, located in `/tmp`.
 v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
-# URL of VDDK package,
+
+# URL of VDDK package. Location must be accessible over HTTP.
 v2v_vddk_package_url: "http://_path/to/downloaded_vddk_package_/{{ v2v_vddk_package_name }}"
+
 manageiq_provider_name: RHV
+
+# Base URL of CloudForms machine
 manageiq_url: "https://_CloudForms_FQDN_"
-manageiq_validate_certs: false
+
+# Whether to validate certificate of CloudForms server. Default is 'true'
+manageiq_validate_certs: _false_
 manageiq_zone_id: "42000000000001"
+
+# List cloud or infrastructure providers.
+# Each provider is a dictionary with attributes, `name` and `connection_configurations`.
 manageiq_providers:
   - name: "_RHV_"
     connection_configurations:
@@ -61,12 +73,12 @@ manageiq_providers:
 +
 [NOTE]
 ====
-The RHV certificate (`certificate_authority`) is `/etc/pki/ovirt-engine/apache-ca.pem` on the Manager machine.
+RHV `connection_configurations` has a single endpoint, whose role is `default`. You can choose to verify the SSL certificate (`verify_ssl: true`) and provide the CA chain (`certificate_authority`), found in `/etc/pki/ovirt-engine/apache-ca.pem` on the Manager machine.
 ====
 
 * OpenStack Platform conversion host using SSH:
 +
-[options="nowrap" subs="+quotes,verbatim"]
+[options="nowrap" subs="verbatim"]
 ----
 ---
 v2v_host_type: openstack
@@ -94,7 +106,7 @@ manageiq_providers:
 +
 [NOTE]
 ====
-The OpenStack Platform certificate chain (`certificate_authority`) concatenates two CA files:
+OpenStack Platform `connection_configurations` has a single endpoint, whose role is `default`. You can specify the connection security: `non-ssl`, `ssl-without-validation`, or `ssl`. For `ssl`, you must provide a CA chain (certificate_authority), which is a concatenation of the following CA files:
 
 * `/etc/pki/ca-trust/source/anchors/undercloud-cacert.pem` on the undercloud server
 * `/etc/pki/ca-trust/anchors/overcloud-cacert.pem` on one of the overcloud controllers
@@ -111,7 +123,7 @@ If you deploy your own link:https://access.redhat.com/documentation/en-us/red_ha
 
 . Add the following lines to `secure_vars.yml`:
 +
-[options="nowrap" subs="+quotes,verbatim"]
+[options="nowrap" subs="verbatim"]
 ----
 ---
 # Use this file for sensitive information
@@ -121,7 +133,9 @@ manageiq_username: "_username_"
 # CloudForms `admin` password:
 manageiq_password: "_password_"
 
-# SSH private key to connect to VMware hypervisors
+# SSH private key to connect to VMware hypervisors.
+# You will copy this key to the hypervisors at a later stage if you configure the
+# conversion hosts for SSH transformation.
 v2v_ssh_private_key: |
   -----BEGIN RSA PRIVATE KEY-----
   b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAAAAdzc2gtcn....
@@ -136,6 +150,18 @@ v2v_ssh_private_key: |
     -e @extra_vars.yml -e @secure_vars.yml --ask-vault-pass \
     /usr/share/ovirt-ansible-v2v-conversion-host/playbooks/conversion_host_enable.yml
 ----
++
+[IMPORTANT]
+====
+If you run the `conversion_host_enable` playbook more than once on the same host, you will create multiple entries in the CloudForms database for the same host.
+
+Before running the `conversion_host_enable` playbook again, remove the existing database entry by running the `conversion_host_disable` playbook on the host:
+
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ansible-playbook /usr/share/ovirt-ansible-v2v-conversion-host/playbooks/conversion_host_disable.yml
+----
+====
 
 [id="VDDK_and_SSH_Validating_the_transformation_configuration"]
 == VDDK and SSH: Validating the configuration
@@ -147,16 +173,18 @@ v2v_ssh_private_key: |
 # ansible-playbook --ask-vault-pass -i conversion_hosts_inventory.yml conversion_host_check.yml
 ----
 
-If you are configuring the conversion hosts for VDDK transformation, you are ready to xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
+If you are configuring Red Hat Virtualization conversion hosts for VDDK transformation, you must  xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
 
-If you are configuring the conversion hosts for SSH transformation, you must configure the SSH connection.
+If you are configuring OpenStack Platform conversion hosts for VDDK transformation, you can create an xref:Creating_an_Infrastructure_Mapping[infrastructure mapping].
+
+If you are configuring conversion hosts for SSH transformation, you must configure the SSH connection.
 
 [id="SSH_only_Configuring_and_validating_the_SSH_connection"]
 == SSH only: Configuring and validating the SSH connection
 
-. Enable SSH on the VMware hypervisors. (For details, see link:https://docs.vmware.com/en/VMware-vSphere/index.html[VMware vSphere Documentation]. In the left pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].)
+. Enable SSH on the VMware hypervisors. (For instructions, go to link:https://docs.vmware.com/en/VMware-vSphere/index.html[VMware vSphere Documentation]. In the left pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].)
 
-. Copy the SSH keys to all VMware hypervisors to ensure that each conversion host has the SSH key of the ESXi host in its `known_hosts` file:
+. Copy your public SSH key to all VMware hypervisors to ensure that each conversion host has the SSH key of the ESXi host in its `known_hosts` file:
 +
 [options="nowrap" subs="verbatim"]
 ----
