--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
@@ -8,7 +8,9 @@
 
 .Red Hat Virtualization only
 
-* Missing Networks. [[Infrastructure_mapping_missing_networks]]If the infrastructure mapping displays a *Networks missing* error message, delete the mapping, xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticate the RHV conversion hosts], and create a new mapping.
+* Missing networks. [[Infrastructure_mapping_missing_networks]]If the infrastructure mapping displays a *Networks missing* error message, delete the mapping, xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticate the RHV conversion hosts], and create a new mapping.
+
+* Missing networks and datastore. Refreshing the hosts can cause *Networks missing* or *Datastore missing* error messages. Delete the mapping and create a new one.
 
 .OpenStack Platform only
 
@@ -70,7 +72,7 @@ _date_ _time_:ERROR: Command output:
 BadRequestException: Unknown error
 ----
 
-* Not Authorized. The OpenStack Platform provider user configured in CloudForms does not have `admin` role privileges within the target project. link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[Add the `admin` user] as `member` and `admin` to your target project.
+* Not Authorized. The OpenStack Platform provider user, `admin`, configured in CloudForms does not have `admin` role privileges within the target project.  link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[Add the `admin` user] as `member` and `admin` to your target project.
 +
 [options="" subs="verbatim"]
 ----
