--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -1,9 +1,7 @@
 [id="Preparing_the_rhv_target_environment"]
 = Preparing the Red Hat Virtualization environment
-:context: RHV
-:RHV:
 
-include::ref_Software_compatibility_matrix.adoc[]
+Check the xref:Software_compatibility_matrix[] before you install the software.
 
 To prepare the Red Hat Virtualization environment for migration:
 
