changed heading level for software compatibility

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
@@ -1,5 +1,5 @@
 [id="Software_compatibility_matrix"]
-.Software compatibility matrix
+= Software compatibility matrix
 
 You must use the supported product versions for each IMS release:
 
