cleaning up more comments

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
@@ -1,7 +1,7 @@
-[id="Rhel_premigration_playbook"]
+[id="Configuring_the_rhel_premigration_playbook"]
 = Configuring the RHEL pre-migration playbook
 
-If you are migrating source virtual machines with RHEL or other Linux operating systems, you must xref:Setting_up_an_ansible_environment[set up an Ansible environment] and configure the `RHEL pre-migration` playbook to run as a xref:Advanced_options_screen[pre-migration task].
+If you are migrating source virtual machines with RHEL or other Linux operating systems, you must xref:Setting_up_an_ansible_environment[set up an Ansible environment] and configure the `RHEL pre-migration` playbook to run as a xref:Advanced_options_screen[pre-migration task]. If you do not run this playbook, the migration will appear to be successful but you will not be able to access the IP addresses of the migrated virtual machines.
 
 This playbook performs the following tasks on source RHEL virtual machines:
 
