--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -10,7 +10,7 @@ If you are migrating to OpenStack Platform:
 .. Go to the link:https://access.redhat.com/downloads/[Red Hat Customer Portal Product Downloads] site.
 .. In the *A-Z* tab, click *Red Hat OpenStack Platform*.
 .. Click the green *Download Latest* button to go to the OpenStack Platform download page.
-.. In the *Product Software* tab, click TBD (hasn't appeared yet) to download the appliance.
+.. Click the *Product Software* tab and download the `RHOSP V2V Image for Red Hat OpenStack Director (x86_64)`.
 +
 [NOTE]
 ====
