--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Logs.adoc
@@ -3,13 +3,10 @@
 
 To investigate the cause of a failed migration, check the following logs:
 
-* CloudForms migration logs: `/var/www/miq/vmdb/log/automation.log`. This log contains the steps for orchestrating the virtual machine migrations and enables you to troubleshoot migrations initiated from within CloudForms.
+* CloudForms migration logs: `/var/www/miq/vmdb/log/automation.log`. This log contains the steps for orchestrating the virtual machine migrations and enables you to troubleshoot migration errors.
 
-* RHV conversion host logs: `/var/log/vdsm/import/virt-v2v*.log`. These logs are specific for each migration initiated.
+* RHV conversion host logs: `/var/log/vdsm/import/virt-v2v*.log`. These logs are specific for each migration.
 
-* OpenStack conversion host logs: `/var/log/virt-v2v/`. These logs are specific for each migration initiated.
+* OpenStack conversion host logs: `/var/log/virt-v2v/`. These logs are specific for each migration.
 
-* Virtual machine migration log: Click menu:Compute[Migration Plans > Migration Plans Complete], click a migration plan name to view the migration plan details, and click menu:Download Log[Migration log] of a virtual machine.
-+
-.Migrated virtual machine log
-image:Migrated_VM_details.png[]
+* Virtual machine migration log: In menu:Compute[Migration Plans > Migration Plans Complete], click a migration plan name to go to the details view and click menu:Download Log[Migration log] of a virtual machine.
