--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -5,17 +5,17 @@ You can configure your conversion hosts for VDDK or SSH transformation. Configur
 
 . VDDK only: xref:VDDK_only_Downloading_and_copying_VDDK[Downloading and copying the VDDK package]
 . VDDK and SSH: xref:VDDK_and_SSH_Configuring_the_conversion_hosts[Configuring the conversion hosts]
-. VDDK and SSH: xref:VDDK_and_SSH_Validating_the_transformation_configuration[Validating the configuration]
+. VDDK and SSH: xref:VDDK_and_SSH_Validating_the_transformation_configuration[Validating the transformation configuration]
 . SSH only: xref:SSH_only_Configuring_and_validating_the_SSH_connection[Configuring and validating the SSH connection]
 
 [id='VDDK_only_Downloading_and_copying_VDDK']
-== VDDK only: Downloading and copying VDDK
+== VDDK only: Downloading and copying the VDDK package
 
-. Go to link:https://www.vmware.com/support/pubs/[VMware Documentation], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
+. Go to the link:https://www.vmware.com/support/pubs/[VMware Documentation site], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
 
 . Click `Latest Releases` and select the latest VDDK release.
 
-. Download the VDDK package (for example, `VMware-vix-disklib-_version_.x86_64.tar.gz`).
+. Download the VDDK package, `VMware-vix-disklib-_version_.x86_64.tar.gz`.
 
 . Copy the VDDK package to a location that is accessible over `HTTP`, for example, `/var/www/html` on the Red Hat Virtualization Manager machine.
 
@@ -25,6 +25,8 @@ You are ready to configure the conversion hosts.
 == VDDK and SSH: Configuring the conversion hosts
 
 . Go to `/usr/share/ovirt-ansible-v2v-conversion-host/playbooks` on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform).
+
+. Generate an SSH key pair to connect to the VMware hypervisors over SSH. You must create the keys regardless of the chosen transformation method.
 
 . Create `extra_vars.yml` according to the following examples:
 
@@ -42,10 +44,10 @@ v2v_transport_methods:
 # Maximum number of concurrent conversions per host. Default is '10'.
 v2v_max_concurrent_conversions: _10_
 
-# File name of `.tar.gz` package with VDDK library, located in `/tmp`.
+# File name of VDDK package
 v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
 
-# URL of VDDK package. Location must be accessible over HTTP.
+# URL of VDDK package
 v2v_vddk_package_url: "http://_path/to/downloaded_vddk_package_/{{ v2v_vddk_package_name }}"
 
 manageiq_provider_name: RHV
@@ -57,8 +59,8 @@ manageiq_url: "https://_CloudForms_FQDN_"
 manageiq_validate_certs: _false_
 manageiq_zone_id: "42000000000001"
 
-# List cloud or infrastructure providers.
-# Each provider is a dictionary with attributes, `name` and `connection_configurations`.
+# List of cloud or infrastructure providers
+# Each provider is a dictionary with 2 attributes: `name`, `connection_configurations`
 manageiq_providers:
   - name: "_RHV_"
     connection_configurations:
@@ -94,6 +96,7 @@ manageiq_providers:
     connection_configurations:
       - endpoint:
           role: "default"
+# Valid values: `non-ssl`, `ssl-without-validation`, `ssl`. `ssl` requires `certificate_authority`.
           security_protocol: "ssl"
           certificate_authority: |
             -----BEGIN TRUSTED CERTIFICATE-----
@@ -134,8 +137,7 @@ manageiq_username: "_username_"
 manageiq_password: "_password_"
 
 # SSH private key to connect to VMware hypervisors.
-# You will copy this key to the hypervisors at a later stage if you configure the
-# conversion hosts for SSH transformation.
+# You will later copy this key to the VMware hypervisors if you use SSH transformation.
 v2v_ssh_private_key: |
   -----BEGIN RSA PRIVATE KEY-----
   b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAAAAdzc2gtcn....
@@ -153,9 +155,7 @@ v2v_ssh_private_key: |
 +
 [IMPORTANT]
 ====
-If you run the `conversion_host_enable` playbook more than once on the same host, you will create multiple entries in the CloudForms database for the same host.
-
-Before running the `conversion_host_enable` playbook again, remove the existing database entry by running the `conversion_host_disable` playbook on the host:
+Running the `conversion_host_enable` playbook more than once on the same host creates multiple entries in the CloudForms database for the same host. If you need to run the `conversion_host_enable` playbook again, first remove the existing database entry by running the `conversion_host_disable` playbook on the same host:
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -164,62 +164,60 @@ Before running the `conversion_host_enable` playbook again, remove the existing 
 ====
 
 [id="VDDK_and_SSH_Validating_the_transformation_configuration"]
-== VDDK and SSH: Validating the configuration
+== VDDK and SSH: Validating the transformation configuration
 
-. Run the `conversion_host_check` playbook to verify that the conversion hosts are configured correctly:
+Run the `conversion_host_check` playbook to verify that the conversion hosts are configured correctly:
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # ansible-playbook --ask-vault-pass -i conversion_hosts_inventory.yml conversion_host_check.yml
 ----
 
-If you are configuring Red Hat Virtualization conversion hosts for VDDK transformation, you must  xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
+*VDDK only:*
 
-If you are configuring OpenStack Platform conversion hosts for VDDK transformation, you can create an xref:Creating_an_Infrastructure_Mapping[infrastructure mapping].
+* If you are configuring Red Hat Virtualization conversion hosts for VDDK transformation, you must  xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
 
-If you are configuring conversion hosts for SSH transformation, you must configure the SSH connection.
+* If you are configuring OpenStack Platform conversion hosts for VDDK transformation, you can create an xref:Creating_an_Infrastructure_Mapping[infrastructure mapping].
+
+*SSH only:* If you are configuring conversion hosts for SSH transformation, you must configure and validate the SSH connection.
 
 [id="SSH_only_Configuring_and_validating_the_SSH_connection"]
 == SSH only: Configuring and validating the SSH connection
 
-. Enable SSH on all VMware hypervisors. (For instructions, go to link:https://docs.vmware.com/en/VMware-vSphere/index.html[VMware vSphere Documentation]. In the left pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].)
+. Enable SSH on all VMware hypervisors.
++
+For instructions, go to the link:https://docs.vmware.com/en/VMware-vSphere/index.html[VMware vSphere Documentation site]. In the navigation pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].
 
-. On the Red Hat Virtualization Manager machine or on each OpenStack Platform conversion host, create an SSH key pair and copy the public key to each VMware hypervisor, to ensure that each conversion host has the SSH key of the VMware hypervisor in its `known_hosts` file:
+. Copy the public key you created in xref:VDDK_and_SSH_Configuring_the_conversion_hosts[] to each VMware hypervisor to ensure that the Manager or the OpenStack Platform conversion host has the SSH key of the VMware hypervisor in its `known_hosts` file:
 +
 [options="nowrap" subs="verbatim"]
 ----
 # ssh root@_esx1.example.com_ sh -c \
     'cat >> /etc/ssh/keys-root/authorized_keys' < /var/lib/vdsm/.ssh/id_rsa.pub
+#   'cat >> /etc/ssh/keys-root/authorized_keys' < /OpenStack_Platform/conversion_host_key/id_rsa.pub
 ----
 
-. Connect to the VMware hypervisor using `ssh-agent`, the program that `virt-v2v` uses to connect to the hypervisor, to validate the SSH connection:
-+
-* For Red Hat Virtualization:
+. For Red Hat Virtualization, connect to the VMware hypervisor using `ssh-agent` to validate the SSH connection:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # sudo -u vdsm ssh-agent
-SSH_AUTH_SOCK=/tmp/ssh-_Gi2oSn44DHNL_/agent.65904; export SSH_AUTH_SOCK;
-SSH_AGENT_PID=65905; export SSH_AGENT_PID;
-echo Agent pid 65905;
+SSH_AUTH_SOCK=/tmp/ssh-11111AAAAA/agent.12345; export SSH_AUTH_SOCK;
+SSH_AGENT_PID=12345; export SSH_AGENT_PID;
+echo Agent pid 12345;
 
-# sudo -u vdsm SSH_AUTH_SOCK=/tmp/ssh-_Gi2oSn44DHNL_/agent.65904 ssh-add
+# sudo -u vdsm SSH_AUTH_SOCK=/tmp/ssh-11111AAAAA/agent.12345 ssh-add
 # sudo -u vdsm \
-    SSH_AUTH_SOCK=/tmp/ssh-_Gi2oSn44DHNL_/agent.65904 ssh root@_esx1.example.com_
+    SSH_AUTH_SOCK=/tmp/ssh-123456ABCDE/agent.12345 ssh root@_esx1.example.com_
 ----
 +
-* For OpenStack Platform:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-# TBD
-----
+For OpenStack Platform, connect to the VM hypervisor as `cloud-user` to validate the SSH connection.
 
 If the connection is successful, the conversion host is correctly configured for SSH transformation.
 
-[NOTE]
+[IMPORTANT]
 ====
-Red Hat Virtualization only: If you are using SSSD with single sign-on, you must reinstall `ipa-client` without configuring the OpenSSH client. See xref:SSH_transformation_fails[SSH transformation failure] for details.
+*Red Hat Virtualization only:* If you are using SSSD with single sign-on, you must reinstall `ipa-client` without configuring the OpenSSH client. See xref:SSH_transformation_fails[SSH transformation failure] for details.
 ====
 
 You are ready to xref:Enabling_conversion_hosts_in_cloudforms[enable the conversion hosts] in CloudForms.
