--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Best_practices_for_migration.adoc
@@ -16,17 +16,11 @@
 ** Load balancers
 
 * Keep linked applications together, so that they migrate at the same time.
-
 * Schedule your migration carefully, to minimize the impact on your users.
-
 * Stagger the migration schedules.
-
 * Move critical applications during maintenance windows.
-
 * Plan for redundancy.
-
 * Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
-
 * Minimize the impact on your environment by creating multiple migration plans to control and throttle the migration process.
-
+* Perform test migrations with different xref:Configuring_the_maximum_number_of_concurrent_migrations[maximum numbers of concurrent migrations per conversion host] to assess the capabilities of your environment's infrastructure.
 * Prepare your users for downtime.
