--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_and_remigrating.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_and_remigrating.adoc
@@ -7,6 +7,7 @@ When virtual machines fail to migrate, the migration plan's status is `Failed`. 
 
 . Delete newly created target virtual machines or instances to avoid name conflicts with source virtual machines.
 . Delete newly created disks in the target datastore to free up space.
+. OpenStack Platform only: Delete newly created network ports of failed instances.
 
 [[Retrying_a_failed_migration_plan]]
 .Retrying a failed migration plan
