--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -34,7 +34,12 @@ Outbound traffic is enabled by default. If you have changed this setting, enable
 
 . Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.7 or later.
 
-. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments to CloudForms.
+. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments as providers in CloudForms.
++
+[NOTE]
+====
+Do not remove or change a provider before, during, or after migration because it will have negative effects on CloudForms.
+====
 
 . Configure the xref:Conversion_hosts[conversion hosts].
 +
