--- a/doc-High_Availability_Guide/topics/Renaming_HA_appliances.adoc
+++ b/doc-High_Availability_Guide/topics/Renaming_HA_appliances.adoc
@@ -1,12 +1,17 @@
 [[renaming-ha]]
 == Renaming Database-Only Appliances
 
-Renaming database-only appliances in a high availability setup must be performed in a specific order to maintain database replication. After changing the hostnames of the database-only appliances, you will need to re-configure high availability on the primary and standby database-only appliances.
+Renaming database-only appliances in a high availability cluster requires re-configuring high availability on the primary and standby database-only appliances.
 
 
 === Updating Hostnames on Database-Only Appliances
 
-. Confirm and note the hostnames of the active database (primary) appliance and the standby database appliance in the appliance console. 
+
+==== Preparing to Update Appliance Hostnames
+
+Before updating the hostnames of your appliances, note which appliances in the cluster are primary and standby appliances, and stop the failover monitor, database, and `evmserverd` services:
+
+. Note the hostnames of the active database (primary) appliance and the standby database appliances in the appliance console. 
 +
 You can verify this from the appliance summary screen of a database-only appliance, where the status for *Local Database Server* shows _primary_ or _standby_, for example:
 +
@@ -16,10 +21,10 @@ Local Database Server:   running (primary)
 ...
 ----
 +
-. Stop the failover monitor on the non-database {product-title_short} appliances:
+. On the {product-title_short} (non-database) appliances, stop the failover monitor: 
 .. In the appliance console menu, select *Configure Application Database Failover Monitor*. 
 .. Select *Stop Database Failover Monitor*.
-. Stop the database service on the standby database-only appliance:
+. On the primary and standby database-only appliances, stop the `postgresql` database service:
 +
 ----
 # systemctl stop rh-postgresql95-postgresql
@@ -30,32 +35,37 @@ Local Database Server:   running (primary)
 ----
 # systemctl stop evmserverd
 ----
-+
-. Rename the database-only appliance and restart that appliance:
-.. In the appliance console, configure the new hostname or IP address from the *Configure Network* option.
-.. Restart the renamed appliance.
-//Rename, then restart the standby if desired now? [Dayle: need to confirm the goal with bug reporter.]
-+
-. On all appliances, change the host key to the primary database server's new hostname in `vmdb/config/database.yml`.
-. Start `evmserverd` on each {product-title_short} (non-database) appliance:
-+
-----
-# systemctl start evmserverd
-----
-+
+
+
+==== Updating the Primary Database-Only Appliance Hostname
+
+Run the following steps on your primary database-only appliance:
+
+. In the appliance console, configure the new hostname or IP address from the *Configure Network* option.
+. Restart the renamed appliance.
+. Update the `host` key to the primary database appliance's new hostname in `/var/www/miq/vmdb/config/database.yml`.
+
+
+==== Updating the Standby Database-Only Appliance Hostname
+
+Run the following steps on your standby database-only appliances:
+
+. In the appliance console, configure the new hostname or IP address from the *Configure Network* option.
+. Restart the renamed appliance.
+. Update the `host` key to the standby database appliance's new hostname in `/var/www/miq/vmdb/config/database.yml`.
+
+Repeat these steps on any additional standby database-only appliances.
+
 [IMPORTANT]
 ====
-If you are using non-dedicated database appliances, also stop `evmserverd` on those appliances before renaming it and reconfigure the `database.yml` before restarting.
+Your primary and standby appliances must be reachable to each other by their hostnames. If all appliances are on the same network and are resolvable, no additional updates are needed. If your appliances exist on different networks, edit the `/etc/hosts` file on each database appliance to include entries for the IP address and hostname of each other database appliance in the cluster.
 ====
 
-After `evmserverd` has started successfully, all appliances will be able connect to the database. 
-
-After that you will have to re-configure high availability on the primary and standby database-only appliances.
-
-//After that you will have to reconfigure high availability from xref:configuring_primary_db[] 
-//(part 2.3 in Installation - All steps from 2.3 to 2.6?).
+Proceed to re-configure high availability on the primary and standby database-only appliances.
 
 === Re-configuring High Availability on Database-Only Appliances
+
+Re-configure replication on the database-only appliances, and restart services on your cluster.
 
 ==== Configuring the Primary Database-Only Appliance
 
@@ -68,32 +78,15 @@ On the primary database-only appliance, initialize the nodes in the database clu
 .. Enter the cluster database name.
 .. Enter the cluster database username.
 .. Enter the cluster database password and confirm the password.
-.. Enter the primary database-only appliance hostname or IP address.
+.. Enter the new primary database-only appliance hostname or IP address.
 +
 [NOTE]
 ====
-The hostname must be visible to all appliances that communicate with this database, including the {product-title_short} appliances and any global region databases.
+The hostname or IP address must be visible to all appliances that communicate with this database, including the {product-title_short} appliances and any global region databases.
 ====
 +
 .. Confirm that the replication server configuration details are correct, and select `y` to apply the configuration.
 
-
-==== Installing the Standby Database-Only Appliance
-
-The standby database-only appliance is a copy of the primary database-only appliance and takes over the role of primary database in case of failure.
-
-. Deploy a {product-title_short} appliance with an extra partition for the database that is the same size as the primary database-only appliance, as it will contain the same data. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7-Beta/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
-. Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
-. SSH into the {product-title_short} appliance to enter the appliance console. 
-. Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
-. Re-synchronize time information across the appliances:
-+
-------
-# systemctl enable chronyd.service
-# systemctl start chronyd.service
-------
-+
-. In the appliance console, configure the hostname by selecting *Set Hostname*.
 
 
 ==== Configuring the Standby Database-Only Appliance
@@ -110,20 +103,49 @@ On the standby database-only appliance, configure the following:
 .. Enter the cluster database name.
 .. Enter the cluster database username.
 .. Enter the cluster database password.
-.. Enter the primary database-only appliance hostname or IP address.
-.. Enter the standby database-only appliance hostname or IP address.
+.. Enter the new primary database-only appliance hostname or IP address.
+.. Enter the new standby database-only appliance hostname or IP address.
 +
 [NOTE]
 ====
-The hostname must be visible to all appliances that communicate with this database, including the engine appliances and any global region databases.
+The hostname or IP address must be visible to all appliances that communicate with this database, including the engine appliances and any global region databases.
 ====
 +
 .. Select `y` to configure the replication manager for automatic failover.
 .. Confirm that the replication standby server configuration details are correct, and select `y` to apply the configuration. The standby server will then run an initial synchronization with the primary database, and start locally in standby mode.
 . Verify the configuration on the appliance console details screen for the standby server. When configured successfully, *Local Database Server* shows as `running (standby)`. 
-. Restart the failover monitor on the non-database {product-title_short} appliances (appliances running _evmserverd_): 
+. Start the database service (on both appliances?):
++
+----
+# systemctl start rh-postgresql95-postgresql
+----
+
+[IMPORTANT]
+====
+If you are using non-dedicated database appliances, also stop `evmserverd` on those appliances before renaming it and reconfigure the `database.yml` before restarting.
+====
+
+
+
+==== Restarting Services
+
+. Start `evmserverd` on each {product-title_short} (non-database) appliance:
++
+----
+# systemctl start evmserverd
+----
++
+After `evmserverd` has started successfully, all appliances will be able connect to the database.
++
+. Restart the failover monitor on the {product-title_short} (non-database) appliances: 
 .. In the appliance console menu, select *Configure Application Database Failover Monitor*. 
 .. Select *Start Database Failover Monitor*.
+
+
+[NOTE]
+====
+You can view a summary of the renamed appliances by running `repmgr cluster show` on one of the database appliances.
+====
 
 Your {product-title_short} environment is now re-configured for high availability.
 
