restructure section and edited after feedback from QE

--- a/doc-High_Availability_Guide/topics/Installation.adoc
+++ b/doc-High_Availability_Guide/topics/Installation.adoc
@@ -123,6 +123,8 @@ The hostname must be visible to all appliances that communicate with this databa
 
 The standby database-only appliance is a copy of the primary database-only appliance and takes over the role of primary database in case of failure.
 
+Follow these steps to create a new standby appliance, or to add another standby appliance to the cluster.
+
 . Deploy a {product-title_short} appliance with an extra (and unpartitioned) disk for the database that is the same size as the primary database-only appliance, as it will contain the same data. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7-Beta/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
 . Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
 . SSH into the {product-title_short} appliance to enter the appliance console. 
