--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -9,7 +9,10 @@ link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13
 
 link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] provides the user interface required to manage challenging enterprise environments.
 
+[NOTE]
+====
 Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
+====
 
 .Migration phases
 
@@ -30,7 +33,7 @@ The Infrastructure Migration Solution has 4 key phases:
 * Mapping the resources of the source environment to the target environment
 * Creating and running a migration plan
 
-. Verification:
+. xref:Validating_a_migration_plan[Validation]:
 +
 * Checking that the migration plan completed successfully
 * xref:Troubleshooting[Troubleshooting], if necessary
