--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
@@ -33,4 +33,4 @@ Encrypt the Satellite `username` and `password` with Ansible vault in a separate
     - role: ims.rhel_pre_migration
 ----
 
-For more information, see the RHEL pre-migration playbook link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[documentation].
+For more information, see the link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[RHEL pre-migration role documentation].
