--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -14,7 +14,7 @@ If you are migrating to OpenStack Platform:
 +
 [NOTE]
 ====
-You should always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes.
+Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes.
 ====
 
 . Upload the appliance to Glance storage.
