--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -1,7 +1,7 @@
 [id="Preparing_the_osp_target_environment"]
 = Preparing the Red Hat OpenStack Platform environment
 
-Check the xref:Software_compatibility_matrix[] before you install the software.
+Check the xref:Software_compatibility_matrix[software compatibility matrix] before you install the software.
 
 To prepare the Red Hat OpenStack Platform environment for migration:
 
