--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,9 +1,11 @@
 [[Planning_the_migration]]
 = Planning the migration
 
-During the planning phase, you will formulate a specific migration goal, for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
+During the planning phase, formulate a specific migration goal:
 
-The xref:Planning_questions[planning questions] provide guidance for allocating resources. A xref:Migration_example[migration example] is provided so that you can estimate the time duration of the migration.
+Example: "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
+
+See the xref:Planning_questions[planning questions] for guidance in allocating resources. A xref:Migration_example[migration example] is provided so that you can estimate the time duration of the migration.
 
 xref:Best_practices_for_migration[Best practices for migration] help you tailor the migration so that it fits your needs and schedule.
 
