--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_osp_workflow.adoc
@@ -18,7 +18,7 @@ Source virtual machines must be powered on for migration.
 
 . Using the OpenStack Platform attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
 
-. The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, and streams the disks to be converted to the target block storage, using `virt-v2v`. The conversion host creates volumes in the block storage, attaches them to itself, and converts the source disks.
+. The conversion host connects to the source datastore through the ESXi host with `virt-v2v-wrapper` and streams the disks to be converted to the target block storage with `virt-v2v`. The conversion host creates volumes in the block storage, attaches them to itself, and converts the source disks.
 
 . Once the disks are converted, `virt-v2v` detaches the volumes from the conversion host. `virt-v2v-wrapper` creates the target instance in the OpenStack Platform environment with the converted disks, using the flavor and security group defined in the migration plan and the network(s) defined in the infrastructure mapping.
 
