--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_workflow.adoc
@@ -13,10 +13,10 @@ image:vmware_to_rhv_migration_workflow.png[]
 
 . Using the Red Hat Virtualization attributes defined for the target environment, CloudForms initiates communication with the conversion hosts.
 
-. The conversion host connects to the source datastore through the ESXi host, using `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain, using `virt-v2v`, and converts them.
+. The conversion host connects to the source datastore through the ESXi host with `virt-v2v-wrapper`, streams the disks to be converted to the target data storage domain with `virt-v2v`, and converts the disks.
 
-. The virtual machine is created in the Red Hat Virtualization environment. The target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
+. The target virtual machine is created in the Red Hat Virtualization environment. The target virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
 
-. The converted disks are attached to the target virtual machine. The virtual machine is either left powered off or is powered on after migration, depending on its pre-migration power state.
+. The converted disks are attached to the target virtual machine. The target virtual machine's power state is identical to its pre-migration state.
 +
 The migration process is complete and the migration plan's status is displayed in CloudForms.
