--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -3,128 +3,26 @@
 
 The infrastructure migration involves the following key tasks:
 
-. xref:Pre_migration_tasks[Pre_migration_tasks]:
+. xref:Pre_migration_tasks[Pre-migration tasks]:
 
-* If you are migrating a large number of virtual machines or re-migrating virtual machines, create a xref:Creating_a_csv_file_to_import_virtual_machines[CSV file] to import the virtual machines into the migration plan.
+* If you are migrating a large number of virtual machines or re-migrating virtual machines, create a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] to add the virtual machines to the migration plan.
 
 * If you are using Ansible to automate pre- and post-migration tasks, set up the xref:Setting_up_an_ansible_environment[Ansible environment].
 
 * If you are migrating RHEL or other Linux virtual machines, set up the xref:Setting_up_an_ansible_environment[Ansible environment] and configure the xref:Configuring_the_rhel_premigration_playbook[RHEL pre-migration playbook].
 
-. xref:Creating_migration_plan[Creating the migration plan]
+. xref:Creating_a_migration_plan[Creating the migration plan]
 
-. xref:Running_migration_plan[Running the migration plan] immediately or scheduling it to run in the future
+. xref:Running_a_migration_plan[Running the migration plan] immediately or scheduling it to run in the future
 
 You can xref:Canceling_a_migration_plan[cancel] a migration plan.
 
 include::proc_Premigration_tasks.adoc[leveloffset=+1]
 
-[[Creating_migration_plan]]
-== Creating a migration plan
+include::proc_Creating_a_migration_plan.adoc[leveloffset=+1]
 
-. Click menu:Compute[Migration > Migration Plans].
-+
-image:Migration_overview_screen.png[]
+include::proc_Running_a_migration_plan.adoc[leveloffset=+1]
 
-. Click *Create Migration Plan*.
-
-. Perform the following procedures in each migration plan screen:
-
-[cols="1,3", options="header"]
-|===
-|Screen
-|Procedure
-
-|*General*
-.<a|. Select the infrastructure mapping from the drop-down list.
-+
-If you select an OpenStack Platform mapping, an *Instance Properties* screen appears after the *VMs* screen.
-
-. Enter the migration plan name and (optional) description.
-. Select a virtual machine discovery method:
-
-* *Choose from a list of VMs discovered in the selected infrastructure mapping*
-* *Import a CSV file with a list of VMs to be migrated*
-. Click *Next*.
-
-|*VMs*
-.<a|. If you selected *Choose from a list of VMs discovered in the selected infrastructure mapping*, select the virtual machines to be migrated.
-+
-If you selected *Import a CSV file with a list of VMs to be migrated*:
-
-.. Click *Import*.
-.. Browse to the CSV file and click *Open*.
-
-. Click *Next*.
-
-If you cannot discover or import the source virtual machines, see xref:Migration_plan_errors[Migration plan errors].
-
-.<a|*Instance Properties*
-
-(OpenStack Platform only)
-.<a|. Click the pencil icon to edit the network or flavor of each selected virtual machine.
-+
-If a flavor is too small for the source virtual machine, it is marked with an asterisk (`*`).
-. Click *Next*.
-
-.<a|*Advanced Options*
-[[Advanced_options_screen]]
-(Optional)
-.<a|. Select a pre-migration playbook service.
-. Select a post-migration playbook service.
-. Select the virtual machines on which to run the playbook services.
-. Click *Next*.
-
-|*Schedule*
-.<a|. Select a schedule option:
-
-* *Save migration plan to run later*
-* *Start migration immediately*
-
-. Click *Create*.
-
-|*Results*
-.<a|Click *Close*.
-|===
-
-[[Running_migration_plan]]
-== Running a migration plan
-
-You can run the migration plan immediately or in the future, depending on the schedule option that you selected.
-
-=== Running a migration plan immediately
-
-The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time.
-
-To view the migration progress of individual virtual machines:
-
-. Click *Migration Plans in Progress*.
-. Click the migration plan name to display the migration plan details.
-
-[NOTE]
-====
-The counter that shows the migration plan progress in menu:Compute[Migration > Migration Plans] may be a few seconds ahead of the counter that appears in the migration plan details. This is because the migration plans counter displays the total time for running a migration plan, while the migration plan details counter displays the time for migrating the virtual machines.
-====
-
-=== Running a migration plan in the future
-
-The migration plan is saved in *Migration Plans Not Started* and will not run until you schedule or run it.
-
-* To schedule a migration plan:
-
-. Click the *Schedule* button.
-. In the *Schedule Migration Plan* window, select a date and time and click *Schedule*. The plan's status is *Migration Scheduled* with the date and time.
-
-* To run a scheduled plan immediately, click *Migrate*.
-
-* To edit or delete a migration plan, click the *More Actions* icon.
-
-== Validating a migration plan
-
-When the migration plan has finished, click *Migration Plans Complete* to view the status of the migration plan. The completed migration plan shows successfully migrated virtual machines.
-
-A `Denied State` error indicates a problem with the conversion hosts (see xref:Denied_state_error[Denied state error] for more information).
-
-If a virtual machine fails to migrate, see xref:Virtual_machine_migration_failure[Virtual machine migration failure].
+include::proc_Validating_a_migration_plan.adoc[leveloffset=+1]
 
 include::proc_Canceling_a_migration_plan.adoc[leveloffset=+1]
