--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_and_remigrating.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Retrying_and_remigrating.adoc
@@ -1,7 +1,7 @@
 [[Retrying_and_remigrating]]
 = Retrying and re-migrating
 
-When virtual machines fail to migrate, the migration plan's status is `Failed`. You must clean up the target environment if the migration failed during the conversion phase retrying a failed migration plan or remigrating virtual machines.
+When virtual machines fail to migrate, the migration plan's status is `Failed`. You must clean up the target environment if the migration failed during the conversion phase retrying a failed migration plan or re-migrating virtual machines.
 
 .Cleaning up a failed migration
 
@@ -19,12 +19,12 @@ If the source virtual machines have never been migrated, you can retry the faile
 . Click the `Retry` button beside the failed migration plan.
 
 [[Remigrating_virtual_machines]]
-.Remigrating virtual machines
+.Re-migrating virtual machines
 
 If the virtual machines have been migrated previously, you must re-migrate the virtual machines using a CSV file:
 
-. Create a xref:Creating_a_csv_file_to_import_virtual_machines[CSV file] with the names of the source virtual machines.
-. Create a new migration plan using the CSV file to import the virtual machines.
+. Create a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] with the names of the source virtual machines.
+. Create a new migration plan using the CSV file to add the virtual machines.
 
 [NOTE]
 ====
