--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Common_issues_and_mistakes.adoc
@@ -4,13 +4,13 @@
 == Infrastructure mapping errors[[Infrastructure_mapping_errors]]
 
 [[Infrastructure_mapping_missing_resources]]
-* Missing datastores or clusters. If the infrastructure mapping displays a *Datastores missing* or *Clusters missing* error message, delete the mapping and create a new one. This error is caused by creating a mapping and subsequently adding or removing providers or provider objects, which changes their object IDs.
+* Missing datastores or clusters. This error occurs when you create a mapping and subsequently add or remove providers or provider objects, which changes the object IDs. Delete the mapping and create a new one.
 
 .Red Hat Virtualization only
 
-* Missing networks. [[Infrastructure_mapping_missing_networks]]If the infrastructure mapping displays a *Networks missing* error message, delete the mapping, xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticate the RHV conversion hosts], and create a new mapping.
+* Missing networks. [[Infrastructure_mapping_missing_networks]]This error occurs if you do not add the conversion host credentials in CloudForms. Delete the mapping, xref:Enabling_rhv_conversion_hosts_in_cloudforms[enable the conversion hosts in CloudForms], and create a new mapping.
 
-* Missing networks and datastore. Refreshing the hosts can cause *Networks missing* or *Datastore missing* error messages. Delete the mapping and create a new one.
+* Missing networks and datastore. This error occurs when you create a mapping and subsequently refresh the hosts, which changes the object IDs. Delete the mapping and create a new one.
 
 .OpenStack Platform only
 
@@ -18,15 +18,15 @@
 
 == Migration plan errors[[Migration_plan_errors]]
 
-* Virtual machines are not discovered. If a migration plan does not discover the source virtual machines and if the virtual machines have never been migrated in the past, check that the datastores and networks of the source virtual machines have been added to the Infrastructure Mapping.
+* Virtual machines cannot be discovered. If a migration plan cannot discover source virtual machines that have never been migrated in the past, check that the datastores and networks of the source virtual machines have been added to the Infrastructure Mapping.
 +
-If a migration plan does not discover source virtual machines that have been migrated in the past, xref:Remigrating_virtual_machines[re-migrate] the virtual machines. Previously migrated virtual machines cannot be discovered because they are marked as `migrated` in the CloudForms VMDB.
+If a migration plan cannot discover source virtual machines that have been migrated in the past, xref:Remigrating_virtual_machines[re-migrate] the virtual machines. Previously migrated virtual machines cannot be discovered because they are marked as `migrated` in the CloudForms VMDB.
 
-* Virtual machines cannot be imported. If you cannot import the source virtual machines with a CSV file while creating a migration plan, check the xref:Creating_a_csv_file_to_import_virtual_machines[CSV file's format and fields]. Create a new migration plan using the updated CSV file.
+* Virtual machines cannot be added to the migration plan with a CSV file. If you cannot add the source virtual machines into a migration plan with a CSV file, check the xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file's format and fields]. Create a new migration plan using the updated CSV file.
 
-* `Denied State`. [[Denied_state_error]]If a migration plan fails immediately and the migration plan displays a *Denied State* error message in *Migration Plans Complete*, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. (Red Hat Virtualization only: ensure that you have xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticated the conversion hosts]). Cancel the migration plan and xref:Retrying_a_failed_migration_plan[retry it].
+* `Denied State`. [[Denied_state_error]]If a migration plan fails immediately and the migration plan displays a *Denied State* error message, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. (Red Hat Virtualization only: ensure that you have xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticated the conversion hosts]). Cancel the migration plan and xref:Retrying_a_failed_migration_plan[retry it].
 
-* IP address of RHEL or other Linux virtual machine not accessible after migration. If the IP address of a RHEL or other Linux virtual machine is not accessible after an apparently successful migration, xref:Remigrating_virtual_machines[re-migrate] the virtual machine with the xref:Configuring_the_rhel_premigration_playbook[`RHEL pre-migration` playbook].
+* IP address of RHEL or other Linux virtual machine not accessible after migration. If you cannot access the IP address of a RHEL or other Linux virtual machine after an apparently successful migration, xref:Remigrating_virtual_machines[re-migrate] the virtual machine while running the xref:Configuring_the_rhel_premigration_playbook[`RHEL pre-migration` playbook].
 
 == Virtual machine migration failure[[Virtual_machine_migration_failure]]
 
