--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Logs.adoc
@@ -1,12 +1,29 @@
 [[Logs]]
 = Logs
 
-To investigate the cause of a failed migration, check the following logs:
+You can check the following logs to troubleshoot a failed migration.
 
-* CloudForms migration logs: `/var/www/miq/vmdb/log/automation.log`. This log contains the steps for orchestrating the virtual machine migrations and enables you to troubleshoot migration errors.
+.CloudForms
 
-* RHV conversion host logs: `/var/log/vdsm/import/virt-v2v*.log`. These logs are specific for each migration.
+`/var/www/miq/vmdb/log/automation.log`. This log contains the steps for orchestrating the virtual machine migrations in CloudForms, in order to troubleshoot migration errors.
 
-* OpenStack conversion host logs: `/var/log/virt-v2v/`. These logs are specific for each migration.
+.Conversion hosts
 
-* Virtual machine migration log: In menu:Compute[Migration Plans > Migration Plans Complete], click a migration plan name to go to the details view and click menu:Download Log[Migration log] of a virtual machine.
+* Red Hat Virtualization: `/var/log/vdsm/import/v2v-import-YYYYMMDDTHHMMSS-1243.log` and `v2v-import-YYYYMMDDTHHMMSS-1243-wrapper.log`
+
+* OpenStack Platform: `/var/log/virt-v2v/v2v-import-YYYYMMDDTHHMMSS-1243.log` and `v2v-import-YYYYMMDDTHHMMSS-1243-wrapper.log`
+
+When disk migration starts, two logs are created in the conversion host:
+
+* `virt-v2v-wrapper`: Log of the daemonizing wrapper for `virt-v2v`. This log traces the orchestration of the virtual machine conversion on the conversion host, including disk migration percentages and `virt-v2v` error reporting.
+* `virt-v2v`: Debug output from `virt-v2v` itself. This log tracks the core of the virtual machine process, including `libguestfs` traces and disk migration details.
++
+[IMPORTANT]
+====
+Both logs are required for bug analysis and must be provided if you open a link:https://access.redhat.com/support/cases/#/case/new[Red Hat Support] call.
+====
+
+.Virtual machine
+
+. In menu:Compute[Migration Plans > Migration Plans Complete], click a migration plan name to go to the details view.
+. Click menu:Download Log[Migration log] of a virtual machine.
